Fix extra bottom padding in donate note for symmetrical spacing

--- a/client/src/components/Donation/donation.css
+++ b/client/src/components/Donation/donation.css
@@ -124,6 +124,7 @@
 
 .alert p {
   color: inherit;
+  margin-bottom: 0;
 }
 
 .donate-tabs > .nav-pills {
